# fastapi-user-auth

./: EJERCICIO.md  README.md  main.py  old_main.py  oldcode.py  pyproject.toml  users.db
app/: auth.py  config.py  database.py  models.py  services.py
app/routes/: admin.py  protected.py  public.py
project/: README.md  main.py
project/templates/: admon.html  error_403.html  index.html  informe.html  login.html
templates/: admin.html  configuracion.html  dashboard.html  error_403.html  home.html  login.html  profile.html  reportes.html
